--- a/exercise2style.css
+++ b/exercise2style.css
@@ -3,7 +3,14 @@ li ul{
   background-colour:red
 }
 
-
 li ul div{
   background-color: blue
-  border-stye: 
+  border-stye:
+}
+
+div {
+    width: 300px;
+    border: 25px solid #6495ED;
+    padding: 25px;
+    margin: 25px;
+}
