--- a/exercise2style.css
+++ b/exercise2style.css
@@ -10,7 +10,13 @@ li ul div{
 
 div {
     width: 300px;
-    border: 25px solid #6495ED;
+    border: 25px solid black;
+    background-color: #6495ED;
     padding: 25px;
     margin: 25px;
+}
+
+p h2 div{
+  color: black
+
 }
